Fixed titles overlapping on mobiles

--- a/app/globals.css
+++ b/app/globals.css
@@ -185,4 +185,8 @@ code {
     justify-content: space-around;
     align-items: flex-start;
   }
+
+  .cygreen {
+    margin-top: 100px;
+  }
 }
